--- a/KeepSafe/res/xml/preferences.xml
+++ b/KeepSafe/res/xml/preferences.xml
@@ -2,9 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <PreferenceCategory android:title="Cryptography">
         <EditTextPreference android:title="Iteration count" 
+            android:key="iteration_count"
             android:defaultValue="10000" 
             android:inputType="number"/>
-        <EditTextPreference android:title="Salt length" 
+        <EditTextPreference android:title="Salt length"
+            android:key="salt_length" 
             android:defaultValue="8" 
             android:inputType="number"/>
     </PreferenceCategory>
