--- a/KeepSafe/res/menu/optionsmenu.xml
+++ b/KeepSafe/res/menu/optionsmenu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/preferences" android:title="@string/preferences"></item>
     <item android:id="@+id/selftest" android:title="@string/selftest"></item>
+    <item android:id="@+id/about" android:title="@string/about"></item>
     
 
 </menu>
