--- a/KeepSafe/res/layout/listview_content.xml
+++ b/KeepSafe/res/layout/listview_content.xml
@@ -2,15 +2,15 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="fill_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="fill_parent"
 	    android:orientation="vertical">
 	    
 	<TextView 
 	    android:id="@+id/textListItem" 
 		android:textAppearance="?android:attr/textAppearanceLarge"
         android:drawableLeft="@drawable/lock"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"/>
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"/>
 	    
 <!-- 	
 	<Button
